# snake.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml
src/: core.rs  main.rs  ui.rs
