[package]
name = "snake"
authors = ["xqb64 <x@nuked.one>"]
description = "An ncurses snake game"
readme = "README.md"
repository = "https://github.com/xqb64/snake"
license = "MIT"
keywords = ["snake", "game", "terminal"]
version = "0.1.0"
edition = "2021"

[dependencies]
ncurses = { version = "5.99.0", features = ["wide"] }
rand = "0.7.3"

[dev-dependencies]
rstest = "0.6.4"
